--- a/public/modules/users/views/properties/list.html
+++ b/public/modules/users/views/properties/list.html
@@ -1,24 +1,19 @@
-<section data-ng-controller="UsersPropertiesController" data-ng-init="find()">
+<section class="col-md-12" data-ng-controller="UsersPropertiesController" data-ng-init="find()">
     <div class="page-header">
         <h1>Properties</h1>
     </div>
 
-<section>
+    <p>There's <strong>{{hasTickets()}}</strong> Tickets currently open.</p>
 
-</section>
-    <div class="list-group">
+    <div class="list-group col-md-12">
+        <a data-ng-repeat="property in properties | filter:{userID:authentication.user._id}" data-ng-href="#!/users/properties/{{property._id}}/edit" class="list-group-item col-md-3">
 
-        <p>There's <strong>{{hasTickets()}}</strong> Tickets currently open.</p>
-
-        <a data-ng-repeat="property in properties | filter:{userID:authentication.user._id}" data-ng-href="#!/users/properties/{{property._id}}/edit" class="list-group-item">
-            <small class="list-group-item-text">{{property.created | date:'medium'}} / {{property.user.displayName}} / {{property.userID}}</small>
             <h4 class="list-group-item-heading">{{property.businessName}}</h4>
             <p class="list-group-item-text">{{property.content}}</p>
-
-            <p>Number of tickets: {{property.length}}</p>
-
+            <p>Number of tickets: {{getLenth(property.tickets)}}</p>
         </a>
     </div>
+
     <div class="alert alert-warning text-center" data-ng-hide="!properties || properties.length">
     	No articles yet, why don't you <a href="/#!/users/properties/create">create one</a>?
     </div>
