--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -74,8 +74,6 @@
 	<script type="text/javascript" src="/lib/angular-cookies/angular-cookies.js"></script>
 	<script type="text/javascript" src="/lib/angular-animate/angular-animate.js"></script>
 
-    <!--<script type="text/javascript" src="/lib/angular-underscore-module/angular-underscore-module.js"></script>-->
-
 	<!--Angular UI-->
 	<script type="text/javascript" src="/lib/angular-bootstrap/ui-bootstrap.js"></script>
 	<script type="text/javascript" src="/lib/angular-ui-utils/ui-utils.js"></script>
@@ -100,6 +98,8 @@
 		<!--Livereload script rendered -->
 		<script type="text/javascript" src="http://localhost:35729/livereload.js"></script>
 	{% endif %}
+
+<script type="text/javascript" src="/js/custom.js"></script>
 </body>
 
 </html>
